添加了个自定义alert，备用。增加了取消重新加载页面代码。

--- a/JianshuJSDay24Dafeiji/dafeiji.html
+++ b/JianshuJSDay24Dafeiji/dafeiji.html
@@ -4,13 +4,16 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" href="css/dafeiji.css" />
-		
+		<link rel="stylesheet" href="css/alert.css " />
+
 		<script type="text/javascript" src="js/common.js" ></script>
 		<script type="text/javascript" src="js/MyPlane.js" ></script>
 		<script type="text/javascript" src="js/Bullet.js" ></script>
 		<script type="text/javascript" src="js/Enemy.js" ></script>
 		<script type="text/javascript" src="js/GameEngine.js" ></script>
-		
+		<script type="text/javascript" src="js/alert.js" ></script>
+
+
 		<script type="text/javascript">
 			onload = function(){
 				var oList = document.getElementById("list");
